[package]
name = "gps-data-codec"
version = "1.5.8"
edition = "2021"
license = "MIT"
authors = ["Raphael Stefanini <raphael@routechoices.com>"]
keywords = ["gps", "data", "encode", "decode"]
readme = "README.md"
homepage = "https://github.com/routechoices/gps-data-codec"
repository = "https://github.com/routechoices/gps-data-codec.git"

[lib]
name = "gps_data_codec"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.19.2"
features = ["extension-module"]

[package.metadata.maturin]
name = "gps-data-codec"
